<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".newLocActivity"
    tools:showIn="@layout/activity_new_loc">

    <TextView
        android:id="@+id/locInfo"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="100dp"
        android:gravity="center"
        android:text="@string/locInfo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/startlocation"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:drawableEnd="@drawable/ic_near_me_black_24dp"
        android:gravity="center"
        android:hint="@string/sLoc"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locInfo" />

    <TextView
        android:id="@+id/endlocation"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:drawableEnd="@drawable/ic_near_me_black_24dp"
        android:gravity="center"
        android:hint="@string/eLoc"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startlocation" />

    <TextView
        android:id="@+id/dateInfo"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="100dp"
        android:gravity="center"
        android:text="@string/dtInfo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endlocation"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateInfo" />


</android.support.constraint.ConstraintLayout>
